--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/Poems">CV</a></li>
-        		<li><a href="/Verses">Blog</a></li>
+        		<li><a href="/poems">Poems</a></li>
+        		<li><a href="/quotes">Quotes</a></li>
     		</ul>
 		</nav>
 		<div class="container">
