--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	</head>
 	<body>
 		<nav>
+			<ul>
+				<li><a href = "/home">Home</a></li>
+				<li><a href = "/about">About</a></li>
+				<li><a href = "/poems">Poems</a></li>
+			</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
@@ -16,7 +21,7 @@
     		</div><!-- /.blurb -->
 			<div>
 				<blockquote class="blockquote"> 
-					<p>GOD expects answers for the flowers he sends us, not for the sun and the earth.</p>
+					<p>"GOD expects answers for the flowers he sends us, not for the sun and the earth."</p>
 					<footer class='small text'><p> - From the "Stray Birds"</p> </footer>
 				</blockquote>
 			</div>
