--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 			</ul>
 		</nav>
 		<div class="container">
+			<div class="container">
+				<img class="img-center" src="http://i63.tinypic.com/2yl1p9u.jpg" alt="Tagore Portrait">
+			</div> <!--image-->
     		<div class="info">
         		<h1>Rabindranath Tagore</h1>
 				<p>Rabindranath Tagore (Bengali: রবীন্দ্রনাথ ঠাকুর) sobriquet Gurudev, was a Bengali polymath who reshaped his region's literature and music. Author of Gitanjali and its "profoundly sensitive, fresh and beautiful verse", he became the first non-European to win the Nobel Prize in Literature in 1913. </p>
