--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
 			<div class="container">
-				<img class="img-center" src="http://i63.tinypic.com/2yl1p9u.jpg" alt="Tagore Portrait">
+				<img class="img-center" src="http://i63.tinypic.com/2yl1p9u.jpg" width="600" height="400" alt="Tagore Portrait">
 			</div> <!--image-->
     		<div class="info">
         		<h1>Rabindranath Tagore</h1>
