--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
----
-layout: default
----
-<div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Rabindranath Tagore</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+			<ul>
+				<li><a href = "/home">Home</a></li>
+				<li><a href = "/about">About</a></li>
+				<li><a href = "/poems">Poems</a></li>
+			</ul>
+		</nav>
+		<div class="container">
+			<div class="container">
+				<img class="img-center" src="http://i63.tinypic.com/2yl1p9u.jpg" width="500" height="300" alt="Tagore Portrait">
+			</div> <!--image-->
+    		<div class="info">
+        		<h1>Rabindranath Tagore</h1>
+				<p>Rabindranath Tagore (Bengali: রবীন্দ্রনাথ ঠাকুর) sobriquet Gurudev, was a Bengali polymath who reshaped his region's literature and music. Author of Gitanjali and its "profoundly sensitive, fresh and beautiful verse", he became the first non-European to win the Nobel Prize in Literature in 1913. </p>
+				<p>In translation his poetry was viewed as spiritual and mercurial; his seemingly mesmeric personality, flowing hair, and other-worldly dress earned him a prophet-like reputation in the West. His "elegant prose and magical poetry" remain largely unknown outside Bengal. Tagore introduced new prose and verse forms and the use of colloquial language into Bengali literature, thereby freeing it from traditional models based on classical Sanskrit. He was highly influential in introducing the best of Indian culture to the West and vice versa, and he is generally regarded as the outstanding creative artist of modern India.</p>
+    		</div><!-- /.blurb -->
+			<div>
+				<blockquote class="blockquote"> 
+					<p>"GOD expects answers for the flowers he sends us, not for the sun and the earth."</p>
+	
+				</blockquote>
+			</div>
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="https://github.com/wyrd00">github.com/wyrd00</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
