--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
 				<p>In translation his poetry was viewed as spiritual and mercurial; his seemingly mesmeric personality, flowing hair, and other-worldly dress earned him a prophet-like reputation in the West. His "elegant prose and magical poetry" remain largely unknown outside Bengal. Tagore introduced new prose and verse forms and the use of colloquial language into Bengali literature, thereby freeing it from traditional models based on classical Sanskrit. He was highly influential in introducing the best of Indian culture to the West and vice versa, and he is generally regarded as the outstanding creative artist of modern India.</p>
     		</div><!-- /.blurb -->
 			<div>
+				<h3>Favorite Works</h3>
+				<p>Where the mind is without fear and the head is held high</p>
+				<p>Where knowledge is free </p>
+				<p>Where the world has not been broken up into fragments </p>
+				<p>By narrow domestic walls </p>
+				<p>Where words come out from the depth of truth</p>
+				<p>Where tireless striving stretches its arms towards perfection</p>
+				<p>Where the clear stream of reason has not lost its way</p>
+				<p>Into the dreary desert sand of dead habit </p>
+				<p>Where the mind is led forward by thee </p>
+				<p>Into ever-widening thought and action </p>
+				<p align = right>Into that heaven of freedom, my Father, let my country awake</p>
+    
+    			</div>
 				<blockquote class="blockquote"> 
 					<p>"GOD expects answers for the flowers he sends us, not for the sun and the earth."</p>
 	
@@ -36,3 +50,4 @@
 		</footer>
 	</body>
 </html>
+
