--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				<p>Rabindranath Tagore (Bengali: রবীন্দ্রনাথ ঠাকুর) sobriquet Gurudev, was a Bengali polymath who reshaped his region's literature and music. Author of Gitanjali and its "profoundly sensitive, fresh and beautiful verse", he became the first non-European to win the Nobel Prize in Literature in 1913. </p>
 				<p>In translation his poetry was viewed as spiritual and mercurial; his seemingly mesmeric personality, flowing hair, and other-worldly dress earned him a prophet-like reputation in the West. His "elegant prose and magical poetry" remain largely unknown outside Bengal. Tagore introduced new prose and verse forms and the use of colloquial language into Bengali literature, thereby freeing it from traditional models based on classical Sanskrit. He was highly influential in introducing the best of Indian culture to the West and vice versa, and he is generally regarded as the outstanding creative artist of modern India.</p>
     		</div><!-- /.blurb -->
-			<div>
-				<h3>Favorite Works</h3>
+			<div class='poetry'>
+				<h2>Favorite Works</h2>
 				<p>Where the mind is without fear and the head is held high</p>
 				<p>Where knowledge is free </p>
 				<p>Where the world has not been broken up into fragments </p>
@@ -37,11 +37,11 @@
 				<p align = right>Into that heaven of freedom, my Father, let my country awake</p>
     
     			</div>
-				<blockquote class="blockquote"> 
+			<!--	<blockquote class="blockquote"> 
 					<p>"GOD expects answers for the flowers he sends us, not for the sun and the earth."</p>
 	
 				</blockquote>
-			</div>
+			</div> -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
