--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     		</div><!-- /.blurb -->
 			<div class='poetry'>
 				<h2>Favorite Works</h2>
-				<p>Where the mind is without fear and the head is held high</p>
-				<p>Where knowledge is free </p>
-				<p>Where the world has not been broken up into fragments </p>
-				<p>By narrow domestic walls </p>
-				<p>Where words come out from the depth of truth</p>
-				<p>Where tireless striving stretches its arms towards perfection</p>
-				<p>Where the clear stream of reason has not lost its way</p>
-				<p>Into the dreary desert sand of dead habit </p>
-				<p>Where the mind is led forward by thee </p>
-				<p>Into ever-widening thought and action </p>
-				<p align = right>Into that heaven of freedom, my Father, let my country awake</p>
+				<p>Where the mind is without fear and the head is held high<br>
+				<p>Where knowledge is free <br>
+				<p>Where the world has not been broken up into fragments <br>
+				<p>By narrow domestic walls <br>
+				<p>Where words come out from the depth of truth<br>
+				<p>Where tireless striving stretches its arms towards perfection<br>
+				<p>Where the clear stream of reason has not lost its way<br>
+				<p>Into the dreary desert sand of dead habit <br>
+				<p>Where the mind is led forward by thee <br>
+				<p>Into ever-widening thought and action <br>
+				<p>Into that heaven of freedom, my Father, let my country awake</p>
     
     			</div>
 			<!--	<blockquote class="blockquote"> 
