--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<br>
 				<br>
 				<h4>Where The Mind Is Without Fear</h4>
-				<p><em>Where the mind is without fear and the head is held high<br>
+				<p style="font-size = 0.8em"><em>Where the mind is without fear and the head is held high<br>
 				<p>Where knowledge is free <br>
 				<p>Where the world has not been broken up into fragments <br>
 				<p>By narrow domestic walls <br>
