--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<br>
 				<br>
 				<h3>Where The Mind Is Without Fear</h3>
-				<p style="font-size = 0.4em"><em>Where the mind is without fear and the head is held high<br>
+				<p><em>Where the mind is without fear and the head is held high<br>
 				<p>Where knowledge is free <br>
 				<p>Where the world has not been broken up into fragments <br>
 				<p>By narrow domestic walls <br>
@@ -39,8 +39,10 @@
 				<p>Where the mind is led forward by thee <br>
 				<p>Into ever-widening thought and action <br>
 				<p>Into that heaven of freedom, my Father, let my country awake</p>
-    
-    			</div>
+				<br>
+				<br>
+    				<img src="http://4.bp.blogspot.com/-feHiIWjk8Vg/UdeCQK5aG1I/AAAAAAAATzg/AOFilcurD5s/s1600/Simple-Line-Dark-23.png" alt="elegant symbol">
+					</div>
 			<!--	<blockquote class="blockquote"> 
 					<p>"GOD expects answers for the flowers he sends us, not for the sun and the earth."</p>
 	
