--- a/index.html
+++ b/index.html
@@ -41,7 +41,21 @@
 				<p>Into that heaven of freedom, my Father, let my country awake</p>
 				<br>
 				<br>
-    				<img src="http://4.bp.blogspot.com/-feHiIWjk8Vg/UdeCQK5aG1I/AAAAAAAATzg/AOFilcurD5s/s1600/Simple-Line-Dark-23.png" alt="elegant symbol">
+    				<img src="http://4.bp.blogspot.com/-feHiIWjk8Vg/UdeCQK5aG1I/AAAAAAAATzg/AOFilcurD5s/s1600/Simple-Line-Dark-23.png" width="800" alt="elegant symbol">
+				<br>
+				<br>
+				<h3>Where The Mind Is Without Fear</h3>
+				<p><em>Where the mind is without fear and the head is held high<br>
+				<p>Where knowledge is free <br>
+				<p>Where the world has not been broken up into fragments <br>
+				<p>By narrow domestic walls <br>
+				<p>Where words come out from the depth of truth<br>
+				<p>Where tireless striving stretches its arms towards perfection<br>
+				<p>Where the clear stream of reason has not lost its way<br>
+				<p>Into the dreary desert sand of dead habit <br>
+				<p>Where the mind is led forward by thee <br>
+				<p>Into ever-widening thought and action <br>
+				<p>Into that heaven of freedom, my Father, let my country awake</p>
 					</div>
 			<!--	<blockquote class="blockquote"> 
 					<p>"GOD expects answers for the flowers he sends us, not for the sun and the earth."</p>
