--- a/index.html
+++ b/index.html
@@ -41,21 +41,32 @@
 				<p>Into that heaven of freedom, my Father, let my country awake</p>
 				<br>
 				<br>
-    				<img src="http://4.bp.blogspot.com/-feHiIWjk8Vg/UdeCQK5aG1I/AAAAAAAATzg/AOFilcurD5s/s1600/Simple-Line-Dark-23.png" width="100" alt="elegant symbol">
+    				
+					<img src="http://4.bp.blogspot.com/-feHiIWjk8Vg/UdeCQK5aG1I/AAAAAAAATzg/AOFilcurD5s/s1600/Simple-Line-Dark-23.png" width="100" alt="elegant symbol">
+				
 				<br>
 				<br>
-				<h3>Where The Mind Is Without Fear</h3>
-				<p><em>Where the mind is without fear and the head is held high<br>
-				<p>Where knowledge is free <br>
-				<p>Where the world has not been broken up into fragments <br>
-				<p>By narrow domestic walls <br>
-				<p>Where words come out from the depth of truth<br>
-				<p>Where tireless striving stretches its arms towards perfection<br>
-				<p>Where the clear stream of reason has not lost its way<br>
-				<p>Into the dreary desert sand of dead habit <br>
-				<p>Where the mind is led forward by thee <br>
-				<p>Into ever-widening thought and action <br>
-				<p>Into that heaven of freedom, my Father, let my country awake</p>
+				<h3>Unending Love</h3>
+					<p><em>I seem to have loved you in numberless forms, numberless times…<br>
+					<p>In life after life, in age after age, forever. <br>
+					<p>My spellbound heart has made and remade the necklace of songs, <br>
+					<p>That you take as a gift, wear round your neck in your many forms, <br>
+					<p>In life after life, in age after age, forever.</p>
+					<p>Whenever I hear old chronicles of love, its age-old pain,<br>
+					<p>Its ancient tale of being apart or together.<br>
+					<p>As I stare on and on into the past, in the end you emerge, <br>
+					<p>Clad in the light of a pole-star piercing the darkness of time: <br>
+					<p>You become an image of what is remembered forever.</p>
+					<p>You and I have floated here on the stream that brings from the fount.<br>
+					<p>At the heart of time, love of one for another.<br>
+					<p>We have played along side millions of lovers, shared in the same<br>
+					<p>Shy sweetness of meeting, the same distressful tears of farewell-<br>
+					<p>Old love but in shapes that renew and renew forever.</p>
+					<p>Today it is heaped at your feet, it has found its end in you<br>
+					<p>The love of all man’s days both past and forever:<br>
+					<p>Universal joy, universal sorrow, universal life.<br>
+					<p>The memories of all loves merging with this one love of ours –<br>
+					<p>And the songs of every poet past and forever.</p>
 					</div>
 			<!--	<blockquote class="blockquote"> 
 					<p>"GOD expects answers for the flowers he sends us, not for the sun and the earth."</p>
