--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 				<br>
 				<br>
 				<h3>Unending Love</h3>
-					<p><em>I seem to have loved you in numberless forms, numberless times…<br>
-					<p>In life after life, in age after age, forever. <br>
-					<p>My spellbound heart has made and remade the necklace of songs, <br>
-					<p>That you take as a gift, wear round your neck in your many forms, <br>
-					<p>In life after life, in age after age, forever.</p>
+					<p>I seem to have loved you in numberless forms, numberless times…<br>
+					In life after life, in age after age, forever. <br>
+					My spellbound heart has made and remade the necklace of songs, <br>
+					That you take as a gift, wear round your neck in your many forms, <br>
+					In life after life, in age after age, forever.</p><em>
 					<p>Whenever I hear old chronicles of love, its age-old pain,<br>
 					<p>Its ancient tale of being apart or together.<br>
 					<p>As I stare on and on into the past, in the end you emerge, <br>
