--- a/index.html
+++ b/index.html
@@ -52,21 +52,24 @@
 					My spellbound heart has made and remade the necklace of songs, <br>
 					That you take as a gift, wear round your neck in your many forms, <br>
 					In life after life, in age after age, forever.</p><em>
+					<br>
 					<p>Whenever I hear old chronicles of love, its age-old pain,<br>
-					<p>Its ancient tale of being apart or together.<br>
-					<p>As I stare on and on into the past, in the end you emerge, <br>
-					<p>Clad in the light of a pole-star piercing the darkness of time: <br>
-					<p>You become an image of what is remembered forever.</p>
+					Its ancient tale of being apart or together.<br>
+					As I stare on and on into the past, in the end you emerge, <br>
+					Clad in the light of a pole-star piercing the darkness of time: <br>
+					You become an image of what is remembered forever.</p>
+					<br>
 					<p>You and I have floated here on the stream that brings from the fount.<br>
-					<p>At the heart of time, love of one for another.<br>
-					<p>We have played along side millions of lovers, shared in the same<br>
-					<p>Shy sweetness of meeting, the same distressful tears of farewell-<br>
-					<p>Old love but in shapes that renew and renew forever.</p>
+					At the heart of time, love of one for another.<br>
+					We have played along side millions of lovers, shared in the same<br>
+					Shy sweetness of meeting, the same distressful tears of farewell-<br>
+					Old love but in shapes that renew and renew forever.</p>
+					<br>
 					<p>Today it is heaped at your feet, it has found its end in you<br>
-					<p>The love of all man’s days both past and forever:<br>
-					<p>Universal joy, universal sorrow, universal life.<br>
-					<p>The memories of all loves merging with this one love of ours –<br>
-					<p>And the songs of every poet past and forever.</p>
+					The love of all man’s days both past and forever:<br>
+					Universal joy, universal sorrow, universal life.<br>
+					The memories of all loves merging with this one love of ours –<br>
+					And the songs of every poet past and forever.</p>
 					</div>
 			<!--	<blockquote class="blockquote"> 
 					<p>"GOD expects answers for the flowers he sends us, not for the sun and the earth."</p>
