--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 				<p>In translation his poetry was viewed as spiritual and mercurial; his seemingly mesmeric personality, flowing hair, and other-worldly dress earned him a prophet-like reputation in the West. His "elegant prose and magical poetry" remain largely unknown outside Bengal. Tagore introduced new prose and verse forms and the use of colloquial language into Bengali literature, thereby freeing it from traditional models based on classical Sanskrit. He was highly influential in introducing the best of Indian culture to the West and vice versa, and he is generally regarded as the outstanding creative artist of modern India.</p>
     		</div><!-- /.blurb -->
 			<div class='poetry'>
-				<h2>Favorite Works</h2>
+				<h2>Seleced Works</h2>
 				<br>
-				<br>
-				<br>
-				<h3>Where The Mind Is Without Fear</h3>
+
+				<h3>Where The Mind Is Without Fear</h3><em>
 				<p>Where the mind is without fear and the head is held high<br>
 				Where knowledge is free <br>
 				Where the world has not been broken up into fragments <br>
