--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<nav>
+		
+<!--not using nav for now	<nav>
 			<ul>
 				<li><a href = "/home">Home</a></li>
 				<li><a href = "/about">About</a></li>
 				<li><a href = "/poems">Poems</a></li>
 			</ul>
-		</nav>
+		</nav> -->
+		
 		<div class="container">
 			<div class="container">
 				<img class="img-center" src="http://i63.tinypic.com/2yl1p9u.jpg" width="500" height="300" alt="Tagore Portrait">
